Novi header, precrtavanje, linkovi

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="#services" data-navbar-link>Services</a></li>
         <li><a href="#pricing" data-navbar-link>Pricing</a></li>
         <li><a href="#portfolio" data-navbar-link>Portfolio</a></li>
-        <li><a href="" class="btn" data-navbar-link>Contact Us</a></li>
+        <li><a href="portal.html" class="btn" data-navbar-link>Login</a></li>
       </ul>
     </nav>
     <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
