Izmenjen nacin prijave i prikaz buttona odjavi se

--- a/portal.html
+++ b/portal.html
@@ -44,7 +44,7 @@
         <p>Pretrazi listu pomocu CTRL + F</p>
         <input list="filterCategoryList" id="filterCategoryInput" placeholder="Filtriraj po kategoriji">
         <datalist id="filterCategoryList"></datalist>
-        <button onclick="filterItems()">Filtriraj</button>
+        <button onclick="filterItems()" style="margin-bottom: 10px">Filtriraj</button>
         <button onclick="downloadList()">Preuzmi listu</button>
         <ul id="list"></ul>
     </div>
