Ukupan broj stavki u listi

--- a/portal.html
+++ b/portal.html
@@ -41,6 +41,7 @@
         <button onclick="addItem()">Dodaj</button>
 
         <h2 id="lista">Lista</h2>
+        <p id="counter">Ukupno stavki: 0</p>
         <p>Pretrazi listu pomocu CTRL + F</p>
         <input list="filterCategoryList" id="filterCategoryInput" placeholder="Filtriraj po kategoriji">
         <datalist id="filterCategoryList"></datalist>
