Header i hero pocetna

--- a/index.html
+++ b/index.html
@@ -13,45 +13,30 @@
 </head>
 <body class="unselectable" id="top">
 
-<header class="header" data-header>
-  <div class="container">
-    <div class="overlay" data-overlay></div>
-    <a href="#" class="logo"><img src="images/logo.png">CM Agency</a>
-    <nav class="navbar" data-navbar>
-      <div class="navbar-top">
-        <a href="#" class="logo"><img src="images/logo.png">CM Agency</a>
-        <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
-          <ion-icon name="close-outline"></ion-icon>
-        </button>
-      </div>
-      <ul>
-        <li><a href="#home" data-navbar-link>Home</a></li>
-        <li><a href="#about" data-navbar-link>About</a></li>
-        <li><a href="#services" data-navbar-link>Services</a></li>
-        <li><a href="#pricing" data-navbar-link>Pricing</a></li>
-        <li><a href="#portfolio" data-navbar-link>Portfolio</a></li>
-        <li><a href="portal.html" class="btn" data-navbar-link>Login</a></li>
-      </ul>
-    </nav>
-    <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
-      <ion-icon name="menu-outline"></ion-icon>
-    </button>
-  </div>
+<header>
+    <a href="#" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="portal.html" class="btn">Login <ion-icon name="log-in-outline"></ion-icon></a></li>
+    </ul>
 </header>
 
 <section class="hero" id="home">
     <div class="container">
-      <div class="hero-content">
-        <p>Your Trusted Marketing Partner</p>
-        <h1>We Create Strategies That Drive Results</h1>
-        <p id="text">
-          At CM Agency, we specialize in website development, video production, short clips, logo design, and all forms of modern marketing to help your business grow.
-        </p>
-        <a href="#services" class="btn">Discover Our Services</a>
-      </div>
-      <figure class="hero-banner">
-        <img src="images/hero.png" width="694" height="529" loading="lazy" alt="hero-banner" class="w-100 banner-animation">
-      </figure>
+        <div class="content">
+            <p>Your Trusted Marketing Partner</p>
+            <h1>We Create Strategies That Drive Results</h1>
+            <p id="text">At CM Agency, we specialize in website development, video production, short clips, logo design, and all forms of modern marketing to help your business grow.</p>
+            <a href="#services" class="btn">Discover Our Services</a>
+        </div>
+
+        <div class="banner">
+            <img src="images/hero.png" class="animation">
+        </div>
     </div>
 </section>
 
