--- a/portal.html
+++ b/portal.html
@@ -67,4 +67,7 @@ body {
     height: 100vh;
     background-image: linear-gradient(135deg, #1c1c1c, #383838);
 }
+section{
+    display: block;
+}
 </style>
