--- a/portal.html
+++ b/portal.html
@@ -9,17 +9,16 @@
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<header class="header" data-header>
-    <div class="container">
-        <a href="index.html"class="logo"><img src="images/logo.png">CM Agency</a>
-        <nav class="navbar" data-navbar>
-            <ul><li><a href="" class="btn" id="logout" onclick="logout()" data-navbar-link>Odjavi se</a></li></ul>
-        </nav>
-    </div>
+<header>
+    <a href="index.html" class="logo"><img src="images/logo.png">CM Agency</a>
+    <a href="portal.html"class="btn" id="logout" onclick="logout()">Odjavi se</a>
 </header>
+
+<div class="center-wrapper">
 
 <section class="portal">
     <div id="log">
@@ -53,6 +52,7 @@
     </div>
 </section>
 
+</div>
 
 </body>
 </html>
@@ -61,13 +61,23 @@
 
 <style>
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
+    overflow: hidden;
     background-image: linear-gradient(135deg, #1c1c1c, #383838);
 }
 section{
     display: block;
+}
+header .btn{
+    text-transform: none;
+    font-weight: 500;
+    padding: 12px 35px;
+}
+.center-wrapper {
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+    width: 100%;
+    height: 100%;
 }
 </style>
