Header i hero Animacije i prevod

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 <header>
     <a href="#" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#about">O nama</a></li>
+        <li><a href="#services">Usluge</a></li>
+        <li><a href="#works">Radovi</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="portal.html" class="btn">Login <ion-icon name="log-in-outline"></ion-icon></a></li>
+        <li><a href="#contact">Kontakt</a></li>
+        <li><a href="portal.html" class="btn">Prijavi se <ion-icon name="log-in-outline"></ion-icon></a></li>
     </ul>
 </header>
 
 <section class="hero" id="home">
     <div class="container">
         <div class="content">
-            <p>Your Trusted Marketing Partner</p>
-            <h1>We Create Strategies That Drive Results</h1>
-            <p id="text">At CM Agency, we specialize in website development, video production, short clips, logo design, and all forms of modern marketing to help your business grow.</p>
-            <a href="#services" class="btn">Discover Our Services</a>
+            <p>Vaš Pouzdani Marketinški Partner</p>
+            <h1>Kreiramo strategije koje donose rezultate.</h1>
+            <p id="text">U CM Agency specijalizovani smo za razvoj veb sajtova, produkciju video sadržaja, kratke klipove, dizajn logotipa i sve oblike modernog marketinga koji će pomoći rastu vašeg biznisa.</p>
+            <a href="#contact" class="btn">Kontaktirajte nas <ion-icon name="play-outline"></ion-icon></a>
         </div>
 
         <div class="banner">
