Posebne stranice za blogove

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
         <div class="blog-card">
             <div class="banner">
-                <a href=""><img src="images/blog/launching.png"></a>
+                <a href="lansiranje.html"><img src="blog/launching.png"></a>
             </div>
 
             <div class="content">
-                <a href="">Lansiranje Websajta</a>
+                <a href="lansiranje.html">Lansiranje Websajta</a>
                 <p>Sa modernim dizajnom i funkcionalnostima, naš veb sajt je tu da vas vodi kroz našu ponudu i pomogne vam da postignete poslovni uspeh.</p>
             
                 <div class="meta">
@@ -139,7 +139,7 @@
       
         <div class="blog-card">
             <div class="banner">
-                <a href=""><img src="images/blog/contact.png"></a>
+                <a href=""><img src="blog/contact.png"></a>
             </div>
 
             <div class="content">
@@ -161,7 +161,7 @@
 
         <div class="blog-card">
             <div class="banner">
-                <a href=""><video src="images/blog/follow_ig.mp4" autoplay muted loop></video></a>
+                <a href=""><video src="blog/follow_ig.mp4" autoplay muted loop></video></a>
             </div>
 
             <div class="content">
@@ -183,7 +183,7 @@
 
         <div class="blog-card">
             <div class="banner">
-                <a href=""><video src="images/blog/follow_tt.mp4" autoplay muted loop></video></a>
+                <a href=""><video src="blog/follow_tt.mp4" autoplay muted loop></video></a>
             </div>
 
             <div class="content">
