--- a/index.html
+++ b/index.html
@@ -109,6 +109,43 @@
     </div>
 </section>
 
+<section class="radovi" id="radovi">
+    <h2 class="naslov underline">Naši radovi</h2>
+
+    <div class="video-container">
+        <div class="video-card">
+            <span class="video-title">Klijent 1</span>
+            <video src="images/radovi/maskote.mp4" muted loop autoplay playsinline></video>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <span class="icon">🔇</span>
+            </button>
+        </div>
+        <div class="video-card">
+            <span class="video-title">Klijent 2</span>
+            <video src="images/radovi/agency.mp4" muted loop autoplay playsinline></video>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <span class="icon">🔇</span>
+            </button>
+        </div>
+        <div class="video-card">
+            <span class="video-title">Klijent 3</span>
+            <video src="images/radovi/windows.mp4" muted loop autoplay playsinline></video>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <span class="icon">🔇</span>
+            </button>
+        </div>
+        <div class="video-card">
+            <span class="video-title">Klijent 4</span>
+            <video src="images/radovi/mudja.mp4" muted loop autoplay playsinline></video>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <span class="icon">🔇</span>
+            </button>
+        </div>
+    </div>
+</section>
+
+
+
 <section class="testimonial" id="testimonial">
     <h2 class="naslov underline">Reči klijenata</h2>
 
