Novi video brix

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <div class="video-card">
             <span class="video-title">Tutz</span>
-            <video src="images/radovi/mudja.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/brix.mp4" muted loop autoplay playsinline></video>
             <button class="pause-btn" onclick="togglePlay(this)">
                 <ion-icon name="pause-outline"></ion-icon>
             </button>
